# sf2dboxes

./: CMakeLists.txt  README.md  clang-format.txt
inc/: control.hpp  glue.hpp  render.hpp  window.hpp  world.hpp
src/: main.cpp
src/Window/: getevents.cpp  render.cpp  renderui.cpp  renderworld.cpp  window.cpp
src/control/: control.cpp  processevents.cpp  running.cpp
src/glue/: glue.cpp
